--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div
-            class="profile__image"
-            style="background-image: url(<%=require('./images/avatar.jpg')%>)"
-          ></div>
+          <div class="profile__image_cover">
+            <div class="profile__image-overlay"></div>
+            <div class="profile__image"></div>
+          </div>
           <div class="profile__info">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button"></button>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
@@ -39,7 +39,7 @@
         <p class="footer__copyright">© 2021 Mesto Russia</p>
       </footer>
       <div class="popup popup_type_edit">
-        <div class="popup__content">
+        <div class="popup__content popup-edit-profile">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
           <form class="popup__form" name="edit-profile" novalidate>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="popup popup_type_new-card">
-        <div class="popup__content">
+        <div class="popup__content popup__new-card">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Новое место</h3>
           <form class="popup__form" name="new-place" novalidate>
@@ -117,15 +117,56 @@
       </div>
     </div>
 
-    <template id="card-template">
-      <li class="places__item card">
-        <img class="card__image" src="" alt="" />
-        <button type="button" class="card__delete-button"></button>
-        <div class="card__description">
-          <h2 class="card__title"></h2>
+    <div class="popup popup_type_avatar">
+      <div class="popup__content popup__avatar">
+        <button
+          type="button"
+          class="popup__close"
+          aria-label="Закрыть"
+        ></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="avatar_edit" novalidate>
+          <input
+            type="url"
+            name="link"
+            class="popup__input popup__input_type_url"
+            id="type_url-input"
+            placeholder="Ссылка на картинку"
+            required
+          />
+          <span class="popup__input-error type_url-input-error"></span>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_type_delete">
+      <div class="popup__content popup__delete">
+        <button
+          type="button"
+          class="popup__close"
+          aria-label="Закрыть"
+        ></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <form class="popup__form" name="delete-card">
+          <button type="submit" class="button popup__button">Да</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <template id="card-template">
+    <li class="places__item card">
+      <img class="card__image" src="" alt="" />
+      <button type="button" class="card__delete-button"></button>
+      <div class="card__description">
+        <h2 class="card__title"></h2>
+        <div class="card__like-cover">
           <button type="button" class="card__like-button"></button>
+          <span class="card__like-count">0</span>
         </div>
-      </li>
-    </template>
+      </div>
+    </li>
+  </template>
   </body>
 </html>
